--- a/Hierba-Santa/src/main/resources/templates/menu.html
+++ b/Hierba-Santa/src/main/resources/templates/menu.html
@@ -52,7 +52,7 @@
 
         .menu-container .button1 { background-color: #4CAF50; }
         .menu-container .button2 { background-color: #2196F3; }
-        .menu-container .button3 { background-color: #4CAF50; }
+        .menu-container .button3 { background-color: #2196F3; }
         .menu-container .button4 { background-color: #4CAF50; }
         .menu-container .button5 { background-color: #4CAF50; }
         .menu-container .button6 { background-color: #4CAF50; }
@@ -66,12 +66,12 @@
 <div class="background">
     <div class="menu-container">
         <h1>Menú Principal</h1>
-        <button class="button1" onclick="window.location.href='#'">Ver Pedidos</button>
+        <button class="button1" onclick="window.location.href='/pedido/listarPedidos'">Ver Pedidos</button>
         <button class="button2" onclick="window.location.href='/producto/listarProductos'">Ver Productos</button>
-        <button class="button3" onclick="window.location.href='/categoria/listarCategoria'">Ver Categoria</button>
-        <button class="button4" onclick="window.location.href='#'">Ver Clientes</button>
-        <button class="button5" onclick="window.location.href='#'">Inventario Productos</button>
-        <button class="button6" onclick="window.location.href='#'">Inventario Insumos</button>
+        <button class="button3" onclick="window.location.href='/categoria/listarCategoria'">Ver Categoría</button>
+        <button class="button4" onclick="window.location.href='/cliente/listarClientes'">Ver Clientes</button>
+        <button class="button5" onclick="window.location.href='/inventario/productos'">Inventario Productos</button>
+        <button class="button6" onclick="window.location.href='/inventario/insumos'">Inventario Insumos</button>
     </div>
 </div>
 </body>
