--- a/Hierba-Santa/src/main/resources/templates/menu.html
+++ b/Hierba-Santa/src/main/resources/templates/menu.html
@@ -69,7 +69,8 @@
         <button class="button1" onclick="window.location.href='/pedido/listarPedidos'">Ver Pedidos</button>
         <button class="button2" onclick="window.location.href='/producto/listarProductos'">Ver Productos</button>
         <button class="button3" onclick="window.location.href='/categoria/listarCategoria'">Ver Categoría</button>
-        <button class="button4" onclick="window.location.href='/cliente/listarClientes'">Ver Clientes</button>
+        <button class="button4" onclick="window.location.href='/tipoCliente/listarTipoCliente'">Ver Tipo Cliente</button>
+        <button class="button4" onclick="window.location.href='/cliente/listarCliente'">Ver Clientes</button>
         <button class="button5" onclick="window.location.href='/inventario/productos'">Inventario Productos</button>
         <button class="button6" onclick="window.location.href='/inventario/insumos'">Inventario Insumos</button>
     </div>
