--- a/Hierba-Santa/src/main/resources/templates/TipoCliente/detalleTipoCategoria.html
+++ b/Hierba-Santa/src/main/resources/templates/TipoCliente/detalleTipoCategoria.html
@@ -7,7 +7,7 @@
 <h1>Detalle del Tipo Cliente</h1>
 <div>
     <p><strong>ID:</strong> <span th:text="${tipoCliente.idTipoCliente}">1</span></p>
-    <p><strong>Tipo Cliente:</strong> <span th:text="${tipoCliente.tipoCliente}">Cliente Regular</span></p>
+    <p><strong>Tipo Cliente:</strong> <span th:text="${tipoCliente.tipo}">Cliente Regular</span></p>
     <p><strong>Descripción:</strong> <span th:text="${tipoCliente.descripcion}">Descripción</span></p>
     <p><strong>Beneficios:</strong> <span th:text="${tipoCliente.beneficios}">Beneficios</span></p>
 </div>
