--- a/Hierba-Santa/src/main/resources/templates/menu.html
+++ b/Hierba-Santa/src/main/resources/templates/menu.html
@@ -53,9 +53,12 @@
         .menu-container .button1 { background-color: #4CAF50; }
         .menu-container .button2 { background-color: #2196F3; }
         .menu-container .button3 { background-color: #2196F3; }
-        .menu-container .button4 { background-color: #4CAF50; }
-        .menu-container .button5 { background-color: #4CAF50; }
+        .menu-container .button4 { background-color: #8f7f11; }
+        .menu-container .button5 { background-color: #8f7f11; }
         .menu-container .button6 { background-color: #4CAF50; }
+        .menu-container .button7 { background-color: #4CAF50; }
+        .menu-container .button8 { background-color: #ba410c; }
+        .menu-container .button9 { background-color: #ba410c; }
 
         .menu-container button:hover {
             opacity: 0.8;
@@ -70,9 +73,11 @@
         <button class="button2" onclick="window.location.href='/producto/listarProductos'">Ver Productos</button>
         <button class="button3" onclick="window.location.href='/categoria/listarCategoria'">Ver Categoría</button>
         <button class="button4" onclick="window.location.href='/tipoCliente/listarTipoCliente'">Ver Tipo Cliente</button>
-        <button class="button4" onclick="window.location.href='/cliente/listarCliente'">Ver Clientes</button>
-        <button class="button5" onclick="window.location.href='/inventario/productos'">Inventario Productos</button>
-        <button class="button6" onclick="window.location.href='/inventario/insumos'">Inventario Insumos</button>
+        <button class="button5" onclick="window.location.href='/cliente/listarCliente'">Ver Clientes</button>
+        <button class="button6" onclick="window.location.href='/inventarioProducto/listarInvProductos'">Inventario Productos</button>
+        <button class="button7" onclick="window.location.href='/inventarioInsumo/listarInvInsumos'">Inventario Insumos</button>
+        <button class="button8" onclick="window.location.href='/empleado/listarEmpleados'">Empleados</button>
+        <button class="button9" onclick="window.location.href='/proveedores/listarProveedores'">Proveedores</button>
     </div>
 </div>
 </body>
