--- a/Hierba-Santa/src/main/resources/templates/Cliente/insertarCliente.html
+++ b/Hierba-Santa/src/main/resources/templates/Cliente/insertarCliente.html
@@ -2,10 +2,25 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Insertar Cliente</title>
+    <script>
+        function validarFormulario() {
+            var nombreCompleto = document.getElementById("nombreCompleto").value;
+            var dni = document.getElementById("dni").value;
+            var correo = document.getElementById("correo").value;
+            var tipoCliente = document.getElementById("tipoCliente").value;
+
+            if (nombreCompleto === "" || dni === "" || correo === "" || tipoCliente === "") {
+                alert("Por favor, complete todos los campos requeridos.");
+                return false;
+            }
+
+            return true;
+        }
+    </script>
 </head>
 <body>
 <h1>Insertar Nuevo Cliente</h1>
-<form th:action="@{/cliente/insertarCliente}" th:object="${cliente}" method="post">
+<form th:action="@{/cliente/insertarCliente}" th:object="${cliente}" method="post" onsubmit="return validarFormulario()">
     <label for="nombreCompleto">Nombre Completo:</label>
     <input type="text" id="nombreCompleto" th:field="*{nombreCompleto}" required>
     <br>
@@ -26,15 +41,13 @@
     <br>
     <label for="tipoCliente">Tipo Cliente:</label>
     <select id="tipoCliente" th:field="*{tipoCliente}" required>
-        <option th:each="tipoCliente : ${tipoClientes}" th:value="${tipoCliente}" th:text="${tipoCliente.tipoCliente}"></option>
+        <option th:each="tipoCliente : ${tcliente}" th:value="${tipoCliente.idTipoCliente}" th:text="${tipoCliente.tipo}"></option>
     </select>
     <br>
     <label for="totalPedidosSinCancelar">Total Pedidos Sin Cancelar:</label>
     <input type="number" id="totalPedidosSinCancelar" th:field="*{totalPedidosSinCancelar}">
     <br>
-    <label for="fechaRegistro">Fecha de Registro:</label>
-    <input type="date" id="fechaRegistro" th:field="*{fechaRegistro}">
-    <br>
+    <input type="hidden" id="fechaRegistro" th:field="*{fechaRegistro}">
     <button type="submit">Insertar</button>
 </form>
 <a th:href="@{/cliente/listarCliente}">Volver a la Lista</a>
