--- a/Hierba-Santa/src/main/resources/templates/Cliente/listarCliente.html
+++ b/Hierba-Santa/src/main/resources/templates/Cliente/listarCliente.html
@@ -23,20 +23,20 @@
   </thead>
   <tbody>
   <tr th:each="cliente : ${listaClientes}">
-    <td th:text="${cliente.idCliente}">1</td>
+    <td th:text="${cliente.idCliente}">Codigo</td>
     <td th:text="${cliente.nombreCompleto}">Nombre Completo</td>
     <td th:text="${cliente.dni}">DNI</td>
     <td th:text="${cliente.correo}">Correo</td>
     <td th:text="${cliente.telefono}">Teléfono</td>
     <td th:text="${cliente.direccion}">Dirección</td>
     <td th:text="${cliente.fechaNacimiento}">Fecha de Nacimiento</td>
-    <td th:text="${cliente.tipoCliente.tipoCliente}">Tipo Cliente</td>
+    <td th:text="${cliente.tipoCliente.tipo}">Tipo Cliente</td>
     <td th:text="${cliente.totalPedidosSinCancelar}">Total Pedidos Sin Cancelar</td>
     <td th:text="${cliente.fechaRegistro}">Fecha de Registro</td>
     <td>
-      <a th:href="@{/cliente/detalleCliente/{id}(id=${cliente.idCliente})}">Detalle</a>
-      <a th:href="@{/cliente/editarCliente/{id}(id=${cliente.idCliente})}">Editar</a>
-      <a th:href="@{/cliente/eliminarCliente/{id}(id=${cliente.idCliente})}">Eliminar</a>
+      <a th:href="@{/cliente/editarCliente/{idCliente}(idCliente=${cliente.idCliente})}">Editar</a>
+      <a th:href="@{/cliente/eliminarCliente/{idCliente}(idCliente=${cliente.idCliente})}" onclick="return confirm('¿Está seguro de que desea eliminar este cliente?')">Eliminar</a>
+      <a th:href="@{/cliente/detalleCliente/{idCliente}(idCliente=${cliente.idCliente})}">Detalle</a>
     </td>
   </tr>
   </tbody>
